# tucochedana_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: rust.yml  style.yml
docker/: query.sh  start.sh
iac/: production.tf  provider.tf  telegram_security_group.tf
migrations/: info.txt
migrations/2023-07-04-151002_fang/: down.sql  up.sql
migrations/2024-11-07-131315_tu-coche-dana-bot/: down.sql  up.sql
migrations/2024-11-07-222833_vehicle/: down.sql  up.sql
resources/: help.md
src/: db.rs  lib.rs  main.rs  server.rs  test.rs  workers.rs
src/db/: repo.rs
src/db/model/: chat.rs  client_state.rs  vehicle.rs
src/db/queries/: check_chat_exists.sql  concat_to_selected_profiles.sql  concat_to_subscribed_vehicles.sql  concat_to_subscribers.sql  count_subscribers_plate.sql  delete_all_tasks_by_profile_id.sql  delete_chat.sql  delete_fetch_tasks_by_plate.sql  delete_fetch_tasks_by_profile_id.sql  delete_vehicle.sql  filter_active_chats.sql  get_chat.sql  get_vehicle.sql  get_vehicles.sql  get_vehicles_by_chat_id.sql  insert_chat.sql  insert_vehicle.sql  modify_active vehicle.sql  modify_active_chat.sql  modify_found_at vehicle.sql  modify_offset.sql  modify_state.sql  modify_subscribed_chats.sql  modify_subscribers_vehicle.sql  update_subscribed_chats.sql
src/tasks/: fetch.rs
src/telegram/: client.rs  handler.rs
src/test/: server.rs  webhook.rs
src/tucochedana/: client.rs
src/update_handler/: command.rs  process_update.rs  process_update_task.rs
src/update_handler/command/backend/: add_vehicle.rs  cancel.rs  get_vehicles.rs  remove_vehicle.rs  start_fetch.rs  stop_fetch.rs
src/update_handler/command/frontend/: add_vehicle.rs  check_vehicle.rs  help.rs  list_vehicles.rs  remove_vehicle.rs  start.rs  vehicle_info.rs
testing-migrations/2024-11-13-171036_testing_bot/: down.sql  up.sql
