[package]
name = "tu-coche-dana-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"
frankenstein = { version = "0.34.X", default-features = false, features = [
    "async-http-client",
] }
log = "0.4"
dotenvy = "0.15.X"
pretty_env_logger = "0.5"
thiserror = "1.0"
fang = { version = "0.10", features = [
    "asynk",
    "derive-error",
], default-features = false }
tokio = { version = "1", features = ["full"] }
typed-builder = "0.20.X"
lazy_static = "1.4.0"
bb8-postgres = "0.8.1"
postgres-types = { version = "0.2.5", features = ["derive"] }
cron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.X"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10" }
axum = "0.7.7"
