[package]
name = "tu-coche-dana-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# Starting in Rust 1.80 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
#lambda_http = "0.13.0"
frankenstein = { version = "0.34.X", default-features = false, features = [
    "async-http-client",
] }
log = "0.4"
dotenvy = "0.15.X"
pretty_env_logger = "0.5"
thiserror = "2"
bytes = "1.8.0"
fang = { version = "0.10", features = [
    "asynk",
    "derive-error",
], default-features = false }
tokio = { version = "1", features = ["full"] }
bon = "2.3.0"
lazy_static = "1.4.0"
bb8-postgres = "0.8.1"
postgres-types = { version = "0.2.5", features = ["derive"] }
cron = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
# HTTP Server
openssl = { version = "0.10" }
axum = "0.7.7"
rand = "0.8"

[dev-dependencies]
# Testing
mockito = "1.5.0"
tower = "0.5"
